--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,14 +4,15 @@ body {
 	background: url(../images/rough_diagonal.png);
 }
 
-.header {
+#header {
+	height:53px;
 	background-color: #4aaaa5;
 	color: white;
 	float: left;
 	text-align: center;
-	font-size: 25px;
-	width: 250px;
-	padding: 10px;
+	font-size: 26px;
+	width: 300px;
+	padding: 15px;
 	position: absolute;
 	top: 0;
 	left: 50px;
@@ -132,6 +133,33 @@ span {
 	font-size: 20px;
 	bottom: 20px;
 }
+
+/*keeping links to grey*/
+a:link {
+    text-decoration: none;
+	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+	color: grey;
+}
+
+a:visited {
+    text-decoration: none;
+	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+	color: grey;
+}
+
+.linkstyle:hover {
+    text-decoration: none;
+	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+	color: grey;
+	font-weight: bold;
+}
+
+a:active {
+    text-decoration: none;
+	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+	color: grey;
+}
+
 
 @media screen and (max-width: 991px) {
 	#sidebar {
